--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body {
   height: 95%;
   width: 100%;
   font-family: sans-serif;
-  background-image: url('http://addyosmani.com/blog/wp-content/uploads/2013/04/unicorn.jpg');
+  background-image: url('http://www.kennanward.com/i/reg/393.jpg');
 }
 
 .main-container {
   width: 75%;
   margin: 10px auto;
-  background: rgba(255, 255, 255, 0.86);
+  background: rgba(255, 250, 250, 0.75);
   padding: 5px;
   border-radius: 10px;
 }
